--- a/pages/Home.html
+++ b/pages/Home.html
@@ -7,6 +7,34 @@
     <title>Home</title>
 </head>
 <body>
+    <nav>
+        <img src="../img/logo-bank-nobg.png" alt="LogoBank">
+        <ul class="nav-links">
+         <li><a href="">Home</a></li>
+         <li><a href="">Projects</a></li>
+         <li><a href="">Pret</a></li>
+         <li><a href="">About Us</a></li>
+         <li><a href="">Contact Us</a></li>
+        </ul>
+        <button>Sign In</button>
+    </nav>
+    <header>
+       
+         <div class="header-content">
+             <div class="title">
+                <p>Your Futur, Your Bank</p>
+                <h1>Futur Bank</h1>
+             </div>   
+             <div class="header-btn">
+                <button>START NOW</button>
+                <img src="../img/output-onlinegiftools.gif" alt="">
+             </div>         
+         </div>
+    </header>
+    <section>
+            <div>aa</div>
+    </section>
+    <footer></footer>
     
 </body>
 </html>
