ajouter une petite partie sur SignIn

--- a/pages/SignIn.html
+++ b/pages/SignIn.html
@@ -17,7 +17,8 @@
                 <label for="email">Email</label>
                 <input type="email" name="email"><br><br>
                 <label for="password">Password</label>
-                <input type="password" name="password" ><br><br>
+                <input type="password" name="password" >
+                <p>Forgot Password ?</p><br><br>
                 <button type="submit">Sign in</button>
             </form>
         </div>
