Validé pages SignIn/SignUp

--- a/pages/SignUp.html
+++ b/pages/SignUp.html
@@ -7,6 +7,28 @@
     <title>Sign Up</title>
 </head>
 <body>
-    
+    <div class="back">
+        <a href="./Home.html"><img src="../img/Back.png" alt="Back to home"></a>
+    </div>
+    <section class="formulaire">
+        <img src="../img/register.svg" alt="Sign In">
+        <div>
+            <form action="" method="post">
+                <label for="email">Email</label>
+                <input type="email" name="email" placeholder="Your Email"><br><br>
+
+                <label for="password">Password</label>
+                <input type="password" name="password"placeholder="Password" ><br><br>
+
+                <label for="password">Confirm Password</label>
+                <input type="password" name="password"placeholder="Confirm Your Password" >
+                <button type="submit">Sign Up</button>
+            </form>
+        </div>
+    </section>
+    <div class="ready">
+        <p>Already have an account ? <a href="/pages/SignIn.html">Sign In </a></p>
+    </div>
 </body>
+
 </html>
