--- a/pages/Home.html
+++ b/pages/Home.html
@@ -16,7 +16,7 @@
          <li><a href="">About Us</a></li>
          <li><a href="">Contact Us</a></li>
         </ul>
-        <button>Sign In</button>
+        <button><a href="./SignIn.html">Sign In</a></button>
     </nav>
     <header>
        
