--- a/pages/SignIn.html
+++ b/pages/SignIn.html
@@ -8,20 +8,24 @@
 </head>
 <body>
     <div class="back">
-        <a href="">Back to home</a>
+        <a href="./Home.html"><img src="../img//Back.png" alt="Back to home"></a>
     </div>
-    <section>
+    <section class="formulaire">
         <img src="../img/login.svg" alt="Sign In">
         <div>
             <form action="" method="post">
                 <label for="email">Email</label>
-                <input type="email" name="email"><br><br>
+                <input type="email" name="email" placeholder="Your Email"><br><br>
                 <label for="password">Password</label>
-                <input type="password" name="password" >
-                <p>Forgot Password ?</p><br><br>
+                <input type="password" name="password"placeholder="Password" >
+                <a href="#">Forgot Password ?</a><br><br>
                 <button type="submit">Sign in</button>
             </form>
         </div>
     </section>
+    <div class="ready">
+        <p>Don't have an account ? <a href="/pages/SignUp.html">Sign up</a></p>
+    </div>
 </body>
+
 </html>
