--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -18,7 +18,7 @@
             <li><a href="">About Us</a></li>
             <li><a href="">Contact Us</a></li>
         </ul>
-        <button>Sign In</button>
+        <button><a href="./SignIn.html">Sign In</a></button>
     </nav>
     <section class="head">
         <div class="we">
