add logo in URL and upgrade SEO

--- a/pages/SignIn.html
+++ b/pages/SignIn.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Découvrez FauteurBanke, la plateforme bancaire sécurisée et intuitive. Gérez vos comptes, effectuez des transactions et suivez vos investissements facilement, partout et à tout moment. Rejoignez-nous pour une expérience bancaire moderne." />
     <link rel="stylesheet" href="/css/SignIn.css">
-    <title>Sign In</title>
+    <link rel="icon" href="/img/Logo-titel.png" type="image/x-icon">
+    <title>FauteurBanke - Plateforme Bancaire Sécurisée et Moderne | Sign In</title>
+
 </head>
 <body>
     <div class="back">
@@ -24,7 +27,7 @@
         </div>
     </section>
     <div class="ready">
-        <p>Don't have an account ? <a href="/pages/SignUp.html">Sign up</a></p>
+        <p>Don't have an account ? <a href="/pages/SignUp.html">Sign Up</a></p>
     </div>
 </body>
 
