--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore our investment options at Future Bank. Gain insights into various investment strategies, market trends . Start your financial journey today!" />
     <link rel="stylesheet" href="/css/Projects.css">
     <title>Projects</title>
 </head>
@@ -44,18 +45,13 @@
 
         <div class="savingimg1">
             <img src="../img/saving accounts 1.png" alt="">
-
-
-
             <h2>Savings Accounts</h2>
-
             <p>Traditional savings accounts <br> that offer interest on deposits. <br>
-
-                <br><br><br> Expected Returns: 0.5% - <br> 2% per annum.
+                <br><br> Expected Returns: 0.5% - <br> 2% per annum.
             </p>
-
             <button class="btn1">Apply Now</button>
         </div>
+        
         <div class="savingimg1">
             <img src="../img/2.png" alt="">
 
@@ -63,7 +59,7 @@
 
             <h2>Certificates of Deposit (CDs)</h2>
 
-            <p>Time deposits that pay a fixed <br> interest rate for a specified <br> term <br> <br><br> Expected
+            <p>Time deposits that pay a fixed <br> interest rate for a specified <br> term <br> <br> Expected
                 Returns: 1% - 3% <br> per annum, depending on the <br> term length.</p>
 
 
