--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -7,6 +7,34 @@
     <title>Contact US</title>
 </head>
 <body>
-    
+    <nav>
+        <img src="../img/logo-bank-nobg.png" alt="LogoBank">
+
+        <ul class="nav-links">
+         <li><a href="./Home.html">Home</a></li>
+         <li><a href="./Projects.html">Projects</a></li>
+         <li><a href="./Prêt.html">Pret</a></li>
+         <li><a href="">About Us</a></li>
+         <li><a href="./Contact.html">Contact Us</a></li>
+        </ul>
+     <button><a href="SignIn.html">Sign In</a></button>
+        
+
+        <div class="burger">
+          <img class="show" src="../img/burgermenu.png" alt="">
+          <img class="hide" src="../img/closeburger.png" alt="">
+
+        </div>
+        <div class="mobile-menu">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="./Projects.html">Projects</a></li>
+                <li><a href="./Prêt.html">Pret</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="./SignIn.html">Login/SignUp</a></li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
