--- a/pages/Home.html
+++ b/pages/Home.html
@@ -12,32 +12,29 @@
 
         <ul class="nav-links">
          <li><a href="">Home</a></li>
-         <li><a href="">Projects</a></li>
-         <li><a href="">Pret</a></li>
+         <li><a href="./Projects.html">Projects</a></li>
+         <li><a href="./Prêt.html">Pret</a></li>
          <li><a href="">About Us</a></li>
-         <li><a href="">Contact Us</a></li>
+         <li><a href="./Contact.html">Contact Us</a></li>
         </ul>
-<<<<<<< HEAD
-        <button>Sign In</button>
+     <button><a href="SignIn.html">Sign In</a></button>
+        
 
         <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
+          <img class="show" src="../img/burgermenu.png" alt="">
+          <img class="hide" src="../img/closeburger.png" alt="">
+
         </div>
         <div class="mobile-menu">
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="">Pret</a></li>
+                <li><a href="./Projects.html">Projects</a></li>
+                <li><a href="./Prêt.html">Pret</a></li>
                 <li><a href="">About Us</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="./SignIn.html">Login/SignUp</a></li>
             </ul>
-            <button class="mobile-signin">Sign In</button>
         </div>
-=======
-        <button><a href="./SignIn.html">Sign In</a></button>
->>>>>>> 0c92fc79853e66f3814545d732b7121d4351a365
     </nav>
     <header class="header">
        
