--- a/pages/Prêt.html
+++ b/pages/Prêt.html
@@ -11,14 +11,32 @@
 <body>
     <nav>
         <img src="../img/logo-bank-nobg.png" alt="LogoBank">
+
         <ul class="nav-links">
-            <li><a href="">Home</a></li>
-            <li><a href="">Projects</a></li>
-            <li><a href="">Pret</a></li>
-            <li><a href="">About Us</a></li>
-            <li><a href="">Contact Us</a></li>
+         <li><a href="./Home.html">Home</a></li>
+         <li><a href="./Projects.html">Projects</a></li>
+         <li><a href="./Prêt.html">Pret</a></li>
+         <li><a href="">About Us</a></li>
+         <li><a href="./Contact.html">Contact Us</a></li>
         </ul>
-        <button>Sign In</button>
+     <button><a href="SignIn.html">Sign In</a></button>
+        
+
+        <div class="burger">
+          <img class="show" src="../img/burgermenu.png" alt="">
+          <img class="hide" src="../img/closeburger.png" alt="">
+
+        </div>
+        <div class="mobile-menu">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="./Projects.html">Projects</a></li>
+                <li><a href="./Prêt.html">Pret</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="./SignIn.html">Login/SignUp</a></li>
+            </ul>
+        </div>
     </nav>
 
     <!--Home section--->
@@ -133,7 +151,7 @@
 
 
 
-
+<script src="../script/script.js"></script>
 </body>
 
 </html>
