--- a/pages/Apropos.html
+++ b/pages/Apropos.html
@@ -3,10 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/Apropos.css">
-    <title>A propos </title>
+    <link rel="stylesheet" href="../css/Apropos.css">
+    <title>Apropos</title>
+    <link href="https://fonts.cdnfonts.com/css/arial-mt" rel="stylesheet">
 </head>
 <body>
+    <nav>
+        <img src="../img/logo-bank-nobg.png" alt="LogoBank">
+        <ul class="nav-links">
+         <li><a href="">Home</a></li>
+         <li><a href="">Projects</a></li>
+         <li><a href="">Pret</a></li>
+         <li><a href="">About Us</a></li>
+         <li><a href="">Contact Us</a></li>
+        </ul>
+        <button>Sign In</button>
+    </nav>
+    <div class="sec-title">
+        <h2>Who we are ?</h2>
+        <hr>
+    </div>
+    <div class="info">
+        <div class="text">
+            <pre>
+ At FutureBank, we are dedicated to trans
+ forming the banking experience for our
+ customers.
+ Established in 1891, our goal is to provide 
+ innovative financial solutions that empow
+ -er individuals and businesses to achieve
+ their financial aspirations. We believe that
+ banking should be simple, accessible, 
+ and customer-centric.</pre>
+        </div>
+        <div class="image">
+            <img src="../img/who.png" alt="image">
+        </div>
+    </div>
+    <div class="back">
+        <div class="min-back">
+         <h3>Why You Should Use FutureBank</h3>
+        </div>
+        <div class="back-text">
+            <pre>
+  Choosing FutureBank means choosing a banking
+  experience designed for the modern world. 
+  We offer cutting-edge financial tools that make
+  managing your money easy, safe, and efficient.
+  Whether you're saving, investing, or planning
+  for the future, our platform provides personalized 
+  services to help you 
+  achieve your goals.
+  With FutureBank, you get
+  reliability, transparency, 
+  and a customer-first
+    approach.
+            </pre>
+        </div>
+        <div class="back-img">
+            <img src="../img/image 6.png" alt="image">
+
+        </div>
+    </div>
+   
+    <div class="team">
+        <div class="deu-back">
+
+        </div>
+        <div class="img-inf">
+            <img src="../img/10 Common Collaboration Mistakes (And How to Avoid Them) (1) 2.png" alt="">
+        </div>
+        <div class="our">
+            <h3>Our Team</h3>
+            <div class="tri-back">
+                <pre>
+  The FutureBank team consists of seasoned profess
+  -ionals with diverse expertise in finance, technology,
+  and customer service.
+  Our experts are passionate about delivering a world
+  class banking experience, combining innovation
+  with a deep commitment to understanding and 
+  addressing the unique needs of our customers. 
+  We work collaboratively to ensure that every user
+  has the best possible experience with FutureBank.
+                </pre>
+            </div>
+        </div>
+    </div>
+   <div class="end">
+    <div class="fin-back">
+
+    </div>
+    <div class="img-histo">
+        <img src="../img/history.png" alt="">
+    </div>
+    <div class="histo">
+        <h3>Our History</h3>
+        <div class="histo-info">
+            <pre>
+   Founded in 1891, FutureBank started with the
+   vision of creating a more accessible and intuit
+   -ive way for people to manage their finances.
+   Over the years, we've grown from a small, 
+   ambitious startup into a trusted financial 
+   platform used by thousands. Our journey has
+   been driven by innovation, customer feedback,
+   and a relentless pursuit of excellence.
+   As we continue to evolve, our commitment to
+   revolutionizing banking remains at the core 
+   of everything we do.
+            </pre>
+        </div>
+    </div>
+   </div>
+    
     
 </body>
 </html>
