--- a/pages/Home.html
+++ b/pages/Home.html
@@ -116,7 +116,7 @@
         <div class="footer-details">
             <div class="contact">
                 <h3>Contact Info</h3>
-                <p>support@futurebank.com<br>+1 (800) 123-4567<br>FutureBank Headquarters123 Innovation Street,<br> 
+                <p>support@futurebank.com<br>+1 (800) 123-4567<br>FutureBank Headquarters123 <br> Innovation Street,<br> 
                     Suite 500<br>New York, NY 10001, USA</p>
                 
             </div>
