--- a/pages/Prêt.html
+++ b/pages/Prêt.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/Pret.css">
     <title>Pret</title>
@@ -121,6 +122,7 @@
                     <input type="number" placeholder=" Phone number" required>
 
                     <input type="message" placeholder=" Subject" required>
+                    
                     <input type="submit" value="Submit" />
 
                 </form>
