--- a/pages/Home.html
+++ b/pages/Home.html
@@ -14,10 +14,10 @@
          <li><a href="">Home</a></li>
          <li><a href="./Projects.html">Projects</a></li>
          <li><a href="./Prêt.html">Pret</a></li>
-         <li><a href="">About Us</a></li>
-         <li><a href="./Contact.html">Contact Us</a></li>
+         <li><a href="">About&nbsp;Us</a></li>
+         <li><a href="./Contact.html">Contact&nbsp;Us</a></li>
         </ul>
-     <button><a href="SignIn.html">Sign In</a></button>
+     <button><a href="SignIn.html">Sign&nbsp;In</a></button>
         
 
         <div class="burger">
@@ -40,7 +40,7 @@
        
          <div class="header-content">
              <div class="title">
-                <p>Your Futur, Your Bank</p>
+                <p>Your&nbsp;Futur,&nbsp;Your&nbsp;Bank</p>
                 <h1>Futur Bank</h1>
              </div>   
              <div class="header-btn">
