modification sur le code

--- a/pages/Apropos.html
+++ b/pages/Apropos.html
@@ -84,7 +84,7 @@
    
     <div class="team">
         <div class="deu-back">
-
+         <!-- Image Section: Team-related visual representation -->
         </div>
         <div class="img-inf">
             <img src="../img/10 Common Collaboration Mistakes (And How to Avoid Them) (1) 2.png" alt="">
@@ -92,7 +92,7 @@
         <div class="our">
             <h3>Our Team</h3>
             <div class="tri-back">
-                <pre>
+                <p>
   The FutureBank team consists of seasoned profess
   -ionals with diverse expertise in finance, technology,
   and customer service.
@@ -102,7 +102,7 @@
   addressing the unique needs of our customers. 
   We work collaboratively to ensure that every user
   has the best possible experience with FutureBank.
-                </pre>
+                </p>
             </div>
         </div>
     </div>
