home, contact, projet done

--- a/pages/Apropos.html
+++ b/pages/Apropos.html
@@ -11,12 +11,12 @@
     <nav>
         <img src="../img/logo-bank-nobg.png" alt="LogoBank">
         <ul class="nav-links">
-         <li><a href="">Home</a></li>
-         <li><a href="">Projects</a></li>
-         <li><a href="">Pret</a></li>
-         <li><a href="">About Us</a></li>
-         <li><a href="">Contact Us</a></li>
-        </ul>
+            <li><a href="">Home</a></li>
+            <li><a href="./Projects.html">Projects</a></li>
+            <li><a href="./Prêt.html">Pret</a></li>
+            <li><a href="">About&nbsp;Us</a></li>
+            <li><a href="./Contact.html">Contact&nbsp;Us</a></li>
+           </ul>
         <button>Sign In</button>
     </nav>
     <div class="sec-title">
