--- a/pages/Home.html
+++ b/pages/Home.html
@@ -11,10 +11,10 @@
         <img src="../img/logo-bank-nobg.png" alt="LogoBank">
 
         <ul class="nav-links">
-         <li><a href="">Home</a></li>
+         <li><a href="./Home.html">Home</a></li>
          <li><a href="./Projects.html">Projects</a></li>
          <li><a href="./Prêt.html">Pret</a></li>
-         <li><a href="">About&nbsp;Us</a></li>
+         <li><a href="./Apropos.html">About&nbsp;Us</a></li>
          <li><a href="./Contact.html">Contact&nbsp;Us</a></li>
         </ul>
      <button><a href="SignIn.html">Sign&nbsp;In</a></button>
@@ -27,11 +27,11 @@
         </div>
         <div class="mobile-menu">
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="./Home.html">Home</a></li>
                 <li><a href="./Projects.html">Projects</a></li>
                 <li><a href="./Prêt.html">Pret</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="./Apropos.html">About Us</a></li>
+                <li><a href="./Contact.html">Contact Us</a></li>
                 <li><a href="./SignIn.html">Login/SignUp</a></li>
             </ul>
         </div>
