--- a/pages/Prêt.html
+++ b/pages/Prêt.html
@@ -16,7 +16,7 @@
          <li><a href="./Home.html">Home</a></li>
          <li><a href="./Projects.html">Projects</a></li>
          <li><a href="./Prêt.html">Pret</a></li>
-         <li><a href="">About Us</a></li>
+         <li><a href="./Apropos.html">About Us</a></li>
          <li><a href="./Contact.html">Contact Us</a></li>
         </ul>
      <button><a href="SignIn.html">Sign In</a></button>
@@ -29,11 +29,11 @@
         </div>
         <div class="mobile-menu">
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="./Home.html">Home</a></li>
                 <li><a href="./Projects.html">Projects</a></li>
                 <li><a href="./Prêt.html">Pret</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="./Apropos.html">About Us</a></li>
+                <li><a href="./Contact.html">Contact Us</a></li>
                 <li><a href="./SignIn.html">Login/SignUp</a></li>
             </ul>
         </div>
