--- a/pages/Home.html
+++ b/pages/Home.html
@@ -45,7 +45,7 @@
              </div>   
              <div class="header-btn">
                 <button>START NOW</button>
-                <img src="../img/aa.png" alt="">
+               <a href="#section1"> <img  src="../img/aa.png" alt="down arrow" class="down-arrow">  </a>
                 
              </div>         
          </div>
@@ -123,9 +123,10 @@
             <div class="explore">
                 <h3>Explore More</h3>
               <ul>
-                <li>Contact Us</li>
-                <li>Abouts US</li>
-                <li>Our Projects</li>
+                <li><a href="./Apropos.html">About&nbsp;Us</a></li>
+                <li><a href="./Contact.html">Contact&nbsp;Us</a></li>
+                <li><a href="./Projects.html">Projects</a></li>
+
               </ul>
                 
             </div>
