--- a/pages/Apropos.html
+++ b/pages/Apropos.html
@@ -114,7 +114,9 @@
         <img src="../img/history.png" alt="">
     </div>
     <div class="histo">
-        <h3>Our History</h3>
+        <div class="histo-tit">
+            <h3>Our History</h3>
+        </div>
         <div class="histo-info">
             <p>
    Founded in 1891, FutureBank started with the
