--- a/pages/Home.html
+++ b/pages/Home.html
@@ -44,7 +44,7 @@
                 <h1>Futur Bank</h1>
              </div>   
              <div class="header-btn">
-                <button>START NOW</button>
+                <button> <a href="./SignIn.html">START NOW</a></button>
                <a href="#section1"> <img  src="../img/aa.png" alt="down arrow" class="down-arrow">  </a>
                 
              </div>         
@@ -52,7 +52,7 @@
     </header>
     <div class="line">
         <img  src="../img/Line 1.png" alt=""></div>
-    <section class="section1">
+    <section id="section1" class="section1">
             <div class="container">
                 <div class="line1">
                 <div class="card">
