--- a/pages/Prêt.html
+++ b/pages/Prêt.html
@@ -94,25 +94,26 @@
     <!-- Avantage -->
 
     <section class="avantage" id="avantage">
-            <div class="avantage_content">
-                <article>
-                    <h1>THE BENEFITS</h1>
-                    <p>Send in your finance application <br> and benefit  from a personalised <br>experience online or in branch.
-                    </p>
-                </article>
-                <article>
-                    <h1>SIMPLIFIED ROUTE</h1>
-                    <p>Describe your project in just a <br>few clicks, and our advisers will <br>take care of the rest.</p>
-                </article>
-                <article>
-                    <h1>PERSONALISED OFFER</h1>
-                    <p>Benefit from a personalised offer <br><br>tailored to your needs.</p>
-                </article>
-                <article>
-                    <h1>DETAILED SIMULATOR</h1>
-                    <p>Simulate your borrowing capacity,<br> <br>monthly payment and ancillary costs.</p>
-                </article>
-            </div>
+        <div class="avantage_content">
+            <article>
+                <h1>THE BENEFITS</h1>
+                <p>Send in your finance application <br> and benefit from a personalised <br>experience online or in
+                    branch.
+                </p>
+            </article>
+            <article>
+                <h1>SIMPLIFIED ROUTE</h1>
+                <p>Describe your project in just a <br>few clicks, and our advisers will <br>take care of the rest.</p>
+            </article>
+            <article>
+                <h1>PERSONALISED OFFER</h1>
+                <p>Benefit from a personalised offer <br><br>tailored to your needs.</p>
+            </article>
+            <article>
+                <h1>DETAILED SIMULATOR</h1>
+                <p>Simulate your borrowing capacity,<br> <br>monthly payment and ancillary costs.</p>
+            </article>
+        </div>
     </section>
 
     <!--contact-->
@@ -155,7 +156,7 @@
 
 
 
-        <!-- <section class="contact">
+    <!-- <section class="contact">
         <div class="contact_box">
             <h2>Enter your details to be contacted by one of our advisers</h2>
         </div>
@@ -186,31 +187,31 @@
 
 
     </section> -->
-        <footer>
-            <span><img src="../img/FUTURE_BANK__1_-removebg-preview.png" alt="logo-bank"></span>
+    <footer>
+        <span><img src="../img/FUTURE_BANK__1_-removebg-preview.png" alt="logo-bank"></span>
 
-            <div class="footer-details">
-                <div class="contact">
-                    <h3>Contact Info</h3>
-                    <p>support@futurebank.com<br>+1 (800) 123-4567<br>FutureBank Headquarters123 <br> Innovation
-                        Street,<br>
-                        Suite 500<br>New York, NY 10001, USA</p>
-                </div>
-                <div class="explore">
-                    <h3>Explore More</h3>
-                    <ul>
-                        <li>Contact Us</li>
-                        <li>About Us</li>
-                        <li>Our Projects</li>
-                    </ul>
-                </div>
-                <div class="sponsor">
-                    <h3>Sponsors</h3>
-                    <img class="m" src="../img/mastercard.png" alt="mastercard-logo">
-                    <img class="v" src="../img/visaa.png" alt="visa-logo">
-                </div>
+        <div class="footer-details">
+            <div class="contact">
+                <h3>Contact Info</h3>
+                <p>support@futurebank.com<br>+1 (800) 123-4567<br>FutureBank Headquarters123 <br> Innovation
+                    Street,<br>
+                    Suite 500<br>New York, NY 10001, USA</p>
             </div>
-        </footer>
+            <div class="explore">
+                <h3>Explore More</h3>
+                <ul>
+                    <li>Contact Us</li>
+                    <li>About Us</li>
+                    <li>Our Projects</li>
+                </ul>
+            </div>
+            <div class="sponsor">
+                <h3>Sponsors</h3>
+                <img class="m" src="../img/mastercard.png" alt="mastercard-logo">
+                <img class="v" src="../img/visaa.png" alt="visa-logo">
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
