add responsive tablette page pret

--- a/pages/Prêt.html
+++ b/pages/Prêt.html
@@ -17,10 +17,10 @@
             <li><a href="Home.html">Home</a></li>
             <li><a href="./Projects.html">Projects</a></li>
             <li><a href="./Prêt.html">Pret</a></li>
-            <li><a href="Apropos.html">About Us</a></li>
-            <li><a href="./Contact.html">Contact Us</a></li>
+            <li><a href="Apropos.html">About&nbsp;Us</a></li>
+            <li><a href="./Contact.html">Contact&nbsp;Us</a></li>
         </ul>
-        <button><a href="SignIn.html">Sign In</a></button>
+        <button><a href="SignIn.html">Sign&nbsp;In</a></button>
 
         <div class="burger">
             <img class="show" src="../img/burgermenu.png" alt="burger menu">
