--- a/pages/Apropos.html
+++ b/pages/Apropos.html
@@ -6,59 +6,26 @@
     <link rel="stylesheet" href="../css/Apropos.css">
     <title>Apropos</title>
     <link href="https://fonts.cdnfonts.com/css/arial-mt" rel="stylesheet">
-   
 </head>
 <body>
     <nav>
         <img src="../img/logo-bank-nobg.png" alt="LogoBank">
         <ul class="nav-links">
-            <li><a href="Home.html">Home</a></li>
+            <li><a href="">Home</a></li>
             <li><a href="./Projects.html">Projects</a></li>
             <li><a href="./Prêt.html">Pret</a></li>
-            <li><a href="Apropos.html">About Us</a></li>
-            <li><a href="./Contact.html">Contact Us</a></li>
-        </ul>
-        <button><a href="SignIn.html">Sign In</a></button>
-
-        <div class="burger">
-            <img class="show" src="../img/burgermenu.png" alt="burger menu">
-            <img class="hide" src="../img/closeburger.png" alt="close burger menu">
-        </div>
-
-        <div class="mobile-menu">
-            <ul>
-                <li><a href="./Home.html">Home</a></li>
-                <li><a href="./Projects.html">Projects</a></li>
-                <li><a href="./Prêt.html">Pret</a></li>
-                <li><a href="Apropos.html">About Us</a></li>
-                <li><a href="./Contact.html">Contact Us</a></li>
-                <li><a href="./SignIn.html">Login/SignUp</a></li>
-            </ul>
-        </div>
+            <li><a href="">About&nbsp;Us</a></li>
+            <li><a href="./Contact.html">Contact&nbsp;Us</a></li>
+           </ul>
+        <button>Sign In</button>
     </nav>
-    <section class="container">
-        <div class="slider-wrapper">
-            <div class="slider">
-                <img id="slider-1" src="../img/sponsor1.jpg" alt="">
-                <img id="slider-2" src="../img/sponsor 2.jpg" alt="">
-                <img id="slider-3" src="../img/sponsor 3.jpg" alt="">
-            </div>
-            <div class="slider-nav">
-                <a href="#slider-1"></a>
-                <a href="#slider-2"></a>
-                <a href="#slider-3"></a>
-            </div>
-        </div>
-    </section>
-
-
     <div class="sec-title">
         <h2>Who we are ?</h2>
         <hr>
     </div>
     <div class="info">
         <div class="text">
-            <p>
+            <pre>
  At FutureBank, we are dedicated to trans
  forming the banking experience for our
  customers.
@@ -67,7 +34,7 @@
  -er individuals and businesses to achieve
  their financial aspirations. We believe that
  banking should be simple, accessible, 
- and customer-centric.</p>
+ and customer-centric.</pre>
         </div>
         <div class="image">
             <img src="../img/who.png" alt="image">
@@ -90,7 +57,7 @@
   With FutureBank, you get
   reliability, transparency, 
   and a customer-first
-  approach.
+    approach.
             </pre>
         </div>
         <div class="back-img">
@@ -101,7 +68,7 @@
    
     <div class="team">
         <div class="deu-back">
-         <!-- Image Section: Team-related visual representation -->
+
         </div>
         <div class="img-inf">
             <img src="../img/10 Common Collaboration Mistakes (And How to Avoid Them) (1) 2.png" alt="">
@@ -109,7 +76,7 @@
         <div class="our">
             <h3>Our Team</h3>
             <div class="tri-back">
-                <p>
+                <pre>
   The FutureBank team consists of seasoned profess
   -ionals with diverse expertise in finance, technology,
   and customer service.
@@ -119,7 +86,7 @@
   addressing the unique needs of our customers. 
   We work collaboratively to ensure that every user
   has the best possible experience with FutureBank.
-                </p>
+                </pre>
             </div>
         </div>
     </div>
@@ -131,11 +98,9 @@
         <img src="../img/history.png" alt="">
     </div>
     <div class="histo">
-        <div class="histo-tit">
-            <h3>Our History</h3>
-        </div>
+        <h3>Our History</h3>
         <div class="histo-info">
-            <p>
+            <pre>
    Founded in 1891, FutureBank started with the
    vision of creating a more accessible and intuit
    -ive way for people to manage their finances.
@@ -147,36 +112,11 @@
    As we continue to evolve, our commitment to
    revolutionizing banking remains at the core 
    of everything we do.
-            </p>
+            </pre>
         </div>
     </div>
    </div>
-
-   <footer>
-    <span><img src="../img/FUTURE_BANK__1_-removebg-preview.png" alt="logo-bank"></span>
     
-    <div class="footer-details">
-        <div class="contact">
-            <h3>Contact Info</h3>
-            <p>support@futurebank.com<br>+1 (800) 123-4567<br>FutureBank Headquarters123 <br> Innovation Street,<br> 
-                Suite 500<br>New York, NY 10001, USA</p>
-        </div>
-        <div class="explore">
-            <h3>Explore More</h3>
-            <ul>
-                <li>Contact Us</li>
-                <li>About Us</li>
-                <li>Our Projects</li>
-            </ul>
-        </div>
-        <div class="sponsor">
-            <h3>Sponsors</h3>
-            <img class="m" src="../img/mastercard.png" alt="mastercard-logo">
-            <img class="v" src="../img/visaa.png" alt="visa-logo">
-        </div>
-    </div>
-</footer>
-   
-<script src="../script/script.js"></script>
+    
 </body>
 </html>
