--- a/pages/Home.html
+++ b/pages/Home.html
@@ -44,15 +44,15 @@
                 <h1>Futur Bank</h1>
              </div>   
              <div class="header-btn">
-                <button> <a href="./SignIn.html">START NOW</a></button>
-               <a href="#section1"> <img  src="../img/aa.png" alt="down arrow" class="down-arrow">  </a>
+                <button>START NOW</button>
+                <img src="../img/aa.png" alt="">
                 
              </div>         
          </div>
     </header>
     <div class="line">
         <img  src="../img/Line 1.png" alt=""></div>
-    <section id="section1" class="section1">
+    <section class="section1">
             <div class="container">
                 <div class="line1">
                 <div class="card">
@@ -123,10 +123,9 @@
             <div class="explore">
                 <h3>Explore More</h3>
               <ul>
-                <li><a href="./Apropos.html">About&nbsp;Us</a></li>
-                <li><a href="./Contact.html">Contact&nbsp;Us</a></li>
-                <li><a href="./Projects.html">Projects</a></li>
-
+                <li>Contact Us</li>
+                <li>Abouts US</li>
+                <li>Our Projects</li>
               </ul>
                 
             </div>
