--- a/pages/Apropos.html
+++ b/pages/Apropos.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="../css/Apropos.css">
     <title>Apropos</title>
     <link href="https://fonts.cdnfonts.com/css/arial-mt" rel="stylesheet">
-   
+    <link rel="icon" href="/img/Logo-titel.png" type="image/x-icon">
+
 </head>
 <body>
     <nav>
