--- a/pages/SignUp.html
+++ b/pages/SignUp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Découvrez FauteurBanke, la plateforme bancaire sécurisée et intuitive. Gérez vos comptes, effectuez des transactions et suivez vos investissements facilement, partout et à tout moment. Rejoignez-nous pour une expérience bancaire moderne." />
-    <link rel="stylesheet" href="/css/SignUp.css">
+    <link rel="stylesheet" href="../css/SignUp.css">
     <link rel="icon" href="/img/Logo-titel.png" type="image/x-icon">
     <title>FauteurBanke - Plateforme Bancaire Sécurisée et Moderne | Sign Up</title>
     
