--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore our investment options at Future Bank. Gain insights into various investment strategies, market trends . Start your financial journey today!" />
-    <link rel="stylesheet" href="/css/Projects.css">
+    <link rel="stylesheet" href="../css/Projects.css">
+    <link rel="icon" href="/img/Logo-titel.png" type="image/x-icon">
+
     <title>Projects </title>
 </head>
 
