--- a/pages/Prêt.html
+++ b/pages/Prêt.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/Pret.css">
+    <link rel="stylesheet" href="../css/Pret.css">
+    <link rel="icon" href="/img/Logo-titel.png" type="image/x-icon">
+
    
     <title>Pret</title>
 </head>
