--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -77,7 +77,7 @@
                         <input type="text" id="subject" name="subject" placeholder="Subject*">
             
                         <label for="message"></label>
-                        <textarea name="message" id="message" name="message" placeholder="Message*"></textarea>
+                        <textarea name="message" id="message"  placeholder="Message*"></textarea>
                         
                     </div>
                 </div>
