--- a/pages/Prêt.html
+++ b/pages/Prêt.html
@@ -128,7 +128,7 @@
 
         <aside class="form">
             <div>
-                <img src="/img/pic-mobile.jpg">
+                <img src="../img/pic-mobile.jpg">
             </div>
             <form method="post">
                 <div class="all">
