--- a/pages/SignIn.html
+++ b/pages/SignIn.html
@@ -27,7 +27,7 @@
         </div>
     </section>
     <div class="ready">
-        <p>Don't have an account ? <a href="/pages/SignUp.html">Sign Up</a></p>
+        <p>Don't have an account ? <a href="../pages/SignUp.html">Sign Up</a></p>
     </div>
 </body>
 
